// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CurriculumVitae /> should render empty 1`] = `
.c0 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-weight: 700;
  font-size: 2.25rem;
  line-heihgt: 2.5rem;
}

.emotion-0 {
  grid-column-start: 3;
  margin-top: 1rem;
}

.emotion-1 {
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-family: "IBM Plex Sans";
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-weight: 400;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <h2
      class="c0"
      id="luottamustoimet"
    >
      Luottamustoimet
    </h2>
  </div>
  <div
    class="emotion-1"
  >
    <ul />
  </div>
  <div
    class="emotion-1"
  >
    <h2
      class="c0"
      id="tyokokemus"
    >
      Työkokemus
    </h2>
  </div>
  <div
    class="emotion-1"
  >
    <ul />
  </div>
  <div
    class="emotion-1"
  >
    <h2
      class="c0"
      id="koulutus"
    >
      Koulutus
    </h2>
  </div>
  <div
    class="emotion-1"
  >
    <ul />
  </div>
</div>
`;

exports[`<CurriculumVitae /> should render full 1`] = `
.c0 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-weight: 700;
  font-size: 2.25rem;
  line-heihgt: 2.5rem;
}

.emotion-0 {
  grid-column-start: 3;
  margin-top: 1rem;
}

.emotion-1 {
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-family: "IBM Plex Sans";
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-weight: 400;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <h2
      class="c0"
      id="luottamustoimet"
    >
      Luottamustoimet
    </h2>
  </div>
  <div
    class="emotion-1"
  >
    <ul>
      <li>
        Toimitilapalvelujen lautakunnan varajäsen
        , 
        Kirkkonummen kunta
         - 
        2023-
      </li>
      <li>
        Hallituksen varajäsen
        , 
        Kirkkonummen Vihreät
         - 
        2023-
      </li>
      <li>
        Länsi-Uudenmaan pelastuslaitos -liikelaitoksen johtokunnan varajäsen
        , 
        Länsi-Uudenmaan hyvinvointialue
         - 
        2022-
      </li>
      <li>
        Suomenkielisen kasvatus- ja koulutuslautakunnan varajäsen
        , 
        Kirkkonummen kunta
         - 
        2021-
      </li>
      <li>
        Perusturvajaoston jäsen
        , 
        Kirkkonummen kunta
         - 
        2021-2022
      </li>
      <li>
        KV-kapteeni
        , 
        Informaatioverkostojen kilta Athene
         - 
        2015
      </li>
      <li>
        Hallituksen puheenjohtaja
        , 
        Aalto Predators
         - 
        2014-2015
      </li>
      <li>
        Hallituksen jäsen
        , 
        Aalto Predators
         - 
        2013
      </li>
      <li>
        Nuorisovaltuuston hallituksen puheenjohtaja
        , 
        Kirkkonummen kunta
         - 
        2010
      </li>
    </ul>
  </div>
  <div
    class="emotion-1"
  >
    <h2
      class="c0"
      id="tyokokemus"
    >
      Työkokemus
    </h2>
  </div>
  <div
    class="emotion-1"
  >
    <ul>
      <li>
        Team Lead
        , 
        Verkkokauppa.com
         (
        Helsinki
        ) - 
        2022-
      </li>
      <li>
        Software developer
        , 
        Verkkokauppa.com
         (
        Helsinki
        ) - 
        2019-2022
      </li>
      <li>
        Software developer
        , 
        Gofore
         (
        Helsinki
        ) - 
        2018-2019
      </li>
      <li>
        Software engineer
        , 
        Zalando
         (
        Helsinki
        ) - 
        2017-2018
      </li>
      <li>
        Software developer
        , 
        Futurice
         (
        Helsinki
        ) - 
        2015-2017
      </li>
      <li>
        Software developer
        , 
        Pulmaton Solutions Oy
         (
        Helsinki
        ) - 
        2014
      </li>
      <li>
        Seasonal trainee
        , 
        Nokia Solutions & Networks
         (
        Espoo
        ) - 
        2013
      </li>
    </ul>
  </div>
  <div
    class="emotion-1"
  >
    <h2
      class="c0"
      id="koulutus"
    >
      Koulutus
    </h2>
  </div>
  <div
    class="emotion-1"
  >
    <ul>
      <li>
        Diplomi-insinööri (informaatioverkostot)
        , 
        Aalto-yliopisto
         (
        Espoo
        ) - 
        2012-2018
      </li>
      <li>
        Datanomi
        , 
        Omnia ammattiopisto
         (
        Kirkkonummi
        ) - 
        2007-2011
      </li>
      <li>
        Ylioppilas
        , 
        Masalan lukio
         (
        Kirkkonummi
        ) - 
        2007-2011
      </li>
    </ul>
  </div>
</div>
`;
